<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_guide">服务指南</string>
    <string name="tab_map">地图导航</string>
    <string name="tab_scan">扫一扫</string>
    <string name="tab_consult">问卷调查</string>
    <string name="btn_consult">提交问卷</string>
    <!--<string name="tab_print">打印</string>-->
    <string name="tab_appointment">预约办事</string>
    <!--<string name="tab_evaluation">评价</string>-->

    <string name="string_questionnaire_text">我们诚邀您对我们的服务进行评价，请按下面内容反馈您的意
见，感谢您的支持！</string>

    <string name="string_back">返回</string>

    <string name="app_name">电子填单台</string>
    <string name="action_settings">设置</string>
    <string name="action_exit">退出</string>
    <string name="hello_world">Hello world!</string>
    <string name="App_CN_Name">电子填单台</string>
    <string name="App_Frist_Tip">正在生成数据，请稍后…</string>
    <string name="WebServerUrl">http://www.egovsoft.cn:8002/egov/agm/Interface.do</string>
    <string name="title_activity_top_grid">TopGridActivity</string>
    <string name="AppFileRootPath">newegov</string>
    <string name="btnUpdateDescription">数据更新</string>
    <string name="prompt_user">用户名</string>
    <string name="prompt_area">区域码</string>
    <string name="prompt_pwd">密码</string>
    <string name="prompt_ip">接口服务IP:端口</string>
    <string name="update_ip">自动更新IP:端口</string>
    <string name="update_ok">确定</string>
    <string name="update_cancel">取消</string>
    <string name="update_btn_text">更新</string>
    <string name="updating_btn_text">更新中...</string>
    <string name="title_activity_update_data">数据更新</string>
    <string name="update_data_tip">正在更新数据，请稍后…</string>
    <string name="title_activity_example_list">样例列表</string>
    <string name="menu_zoom_enable">Enable Zoom</string>
    <string name="menu_zoom_disable">Disable Zoom</string>
    <string name="menu_scale_fit_center">Change to FIT_CENTER</string>
    <string name="menu_scale_fit_start">Change to FIT_START</string>
    <string name="menu_scale_fit_end">Change to FIT_END</string>
    <string name="menu_scale_fit_xy">Change to FIT_XY</string>
    <string name="menu_scale_center">Change to CENTER</string>
    <string name="menu_scale_center_inside">Change to CENTER_INSIDE</string>
    <string name="menu_scale_center_crop">Change to CENTER_CROP</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗?</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="title_activity_tabs">TabsActivity</string>

    <string name="title_appointment">在线预约</string>
    <string name="string_appointment_info">预约人信息</string>
    <string name="string_appointment_detail">预约详情</string>
    <string name="string_appointment_prompt">提示：请在预约当天到中心办理业务，如果未能即使到中心办理预约业务，请及时取消预约业务，如有超过3次预约业务未到中心办理及取消预约的用户，我们将会视您为不诚信用户，会影响您以后在中心办理其他业务和预约业务，给您带来的不便敬请谅解</string>

    <string name="temp">[{"area_id":"3d1614d562ad4e6ebf5530119d3e5f27","area_name":"朝阳区办事大厅","area_code":"110105000000","area_level":3,"parent_id":"110100000000","china_initial":"cyq","position":"116.471531,39.96695"},{"area_id":"3d1614d562ad4e6ebf5530119d3e5555","area_name":"区民政局办事大厅","area_code":"110105001800","area_level":3,"parent_id":"110105000000","china_initial":"","position":""},{"area_id":"30d1978dd87e43b68eb063d740fbd233","area_name":"香河园街道办事大厅","area_code":"110105004900","area_level":4,"parent_id":"110105000000","china_initial":"","position":""}]</string>
</resources>
