<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bj"
    tools:context="com.chablis.lilosoft.activity.QuestionnaireActivity">


    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/color_nav"
        android:paddingLeft="16dp">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@mipmap/back"
            android:drawablePadding="16dp"
            android:padding="20dp"
            android:text="@string/string_back"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="问卷调查"
            android:textColor="@color/white"
            android:textSize="36sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:src="@mipmap/questionnaire_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:paddingBottom="80dp"
        android:layout_marginTop="-20dp"
        android:layout_below="@id/iv_text"
        android:background="@mipmap/questionnaire_bj">

        <TextView
            android:text="@string/string_questionnaire_text"
            android:textColor="@color/color_title"
            android:layout_marginRight="100dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/listview"
            android:scrollbars="none"
            android:layout_marginTop="20dp"
            android:divider="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:background="@mipmap/ems_bj"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_OK"
            android:background="@drawable/d_btn_ques"
            android:text="@string/btn_consult"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textColor="@color/color_letter"
            android:padding="10dp"
            android:layout_marginTop="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_text"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="40dp"
        android:src="@mipmap/questionnaire_people" />

</RelativeLayout>
